--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ad-ex-one",
   "private": true,
-  "homepage": "https://mpbalghari.github.io/ex-three",
+  "homepage": "https://mpbalghari.github.io/ad-ex-one",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
